@@ -4,8 +4,8 @@
 ## Author:      Mattia Barbon
 ## Modified by:
 ## Created:     13/12/2001
-## RCS-ID:      $Id: GridCellRenderer.xs,v 1.11 2006/11/21 21:00:27 mbarbon Exp $
-## Copyright:   (c) 2001-2006 Mattia Barbon
+## RCS-ID:      $Id: GridCellRenderer.xs,v 1.12 2007/03/27 19:33:33 mbarbon Exp $
+## Copyright:   (c) 2001-2007 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -36,10 +36,17 @@ wxGridCellRenderer::GetBestSize( grid, attr, dc, row, col )
   OUTPUT:
     RETVAL
 
-## // thread KO
+static void
+wxGridCellRenderer::CLONE()
+  CODE:
+    wxPli_thread_sv_clone( aTHX_ CLASS, (wxPliCloneSV)wxPli_detach_object );
+
+## // thread OK
 void
 wxGridCellRenderer::DESTROY()
   CODE:
+    wxPli_thread_sv_unregister( aTHX_ wxPli_get_class( aTHX_ ST(0) ),
+                                SvRV( ST(0) ), ST(0) );
     if( THIS )
         THIS->DecRef();
 
