@@ -4,7 +4,7 @@
 ## Author:      Mattia Barbon
 ## Modified by:
 ## Created:     04/12/2001
-## RCS-ID:      $Id: typemap,v 1.15 2007/03/25 16:07:54 mbarbon Exp $
+## RCS-ID:      $Id: typemap,v 1.16 2007/03/27 19:33:33 mbarbon Exp $
 ## Copyright:   (c) 2001, 2003-2007 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
@@ -21,28 +21,28 @@ wxGridRangeSelectEvent * O_WXOBJECT
 wxGridEditorCreatedEvent * O_WXOBJECT
 
 wxGridCellCoords *      O_NON_WXOBJECT_THR
-wxGridCellAttr *        O_NON_WXOBJECT
+wxGridCellAttr *        O_NON_WXOBJECT_THR_SV
 wxGridCellAttr::wxAttrKind      T_ENUM
 
-wxGridCellRenderer *            O_WXCLIENTDATACONTAINER
-wxGridCellStringRenderer *      O_NON_WXOBJECT
-wxGridCellNumberRenderer *      O_NON_WXOBJECT
-wxGridCellFloatRenderer *       O_NON_WXOBJECT
-wxGridCellBoolRenderer *        O_NON_WXOBJECT
-wxGridCellAutoWrapStringRenderer *	O_NON_WXOBJECT
-wxGridCellEnumRenderer *	O_NON_WXOBJECT
-wxGridCellDateTimeRenderer *	O_NON_WXOBJECT
-wxPlGridCellRenderer *          O_WXCLIENTDATACONTAINER
+wxGridCellRenderer *            O_WXCLIENTDATACONTAINER_THR_SV
+wxGridCellStringRenderer *      O_NON_WXOBJECT_THR_SV
+wxGridCellNumberRenderer *      O_NON_WXOBJECT_THR_SV
+wxGridCellFloatRenderer *       O_NON_WXOBJECT_THR_SV
+wxGridCellBoolRenderer *        O_NON_WXOBJECT_THR_SV
+wxGridCellAutoWrapStringRenderer * O_NON_WXOBJECT_THR_SV
+wxGridCellEnumRenderer *	O_NON_WXOBJECT_THR_SV
+wxGridCellDateTimeRenderer *	O_NON_WXOBJECT_THR_SV
+wxPlGridCellRenderer *          O_WXCLIENTDATACONTAINER_THR_SV
 
-wxGridCellEditor *              O_WXCLIENTDATACONTAINER
-wxGridCellTextEditor *          O_NON_WXOBJECT
-wxGridCellNumberEditor *        O_NON_WXOBJECT
-wxGridCellFloatEditor *         O_NON_WXOBJECT
-wxGridCellBoolEditor *          O_NON_WXOBJECT
-wxGridCellChoiceEditor *        O_NON_WXOBJECT
-wxGridCellAutoWrapStringEditor *	O_NON_WXOBJECT
-wxGridCellEnumEditor *		O_NON_WXOBJECT
-wxPlGridCellEditor *            O_WXCLIENTDATACONTAINER
+wxGridCellEditor *              O_WXCLIENTDATACONTAINER_THR_SV
+wxGridCellTextEditor *          O_NON_WXOBJECT_THR_SV
+wxGridCellNumberEditor *        O_NON_WXOBJECT_THR_SV
+wxGridCellFloatEditor *         O_NON_WXOBJECT_THR_SV
+wxGridCellBoolEditor *          O_NON_WXOBJECT_THR_SV
+wxGridCellChoiceEditor *        O_NON_WXOBJECT_THR_SV
+wxGridCellAutoWrapStringEditor * O_NON_WXOBJECT_THR_SV
+wxGridCellEnumEditor *		O_NON_WXOBJECT_THR_SV
+wxPlGridCellEditor *            O_WXCLIENTDATACONTAINER_THR_SV
 
 wxPlGridTable*                  O_WXOBJECT
 wxGridTableBase*                O_WXOBJECT
